syntax = "proto3";
package babylon.checkpointing.v1;

import "babylon/checkpointing/checkpoint.proto";

option go_package = "github.com/babylonchain/babylon/x/checkpointing/types";

message EventCheckpointAccumulating {
    uint64 epoch_num = 1;
}

message EventCheckpointSealed {
    uint64 epoch_num = 1;
}

message EventCheckpointSubmitted {
    uint64 epoch_num = 1;
}

message EventCheckpointConfirmed {
    uint64 epoch_num = 1;
}

message EventCheckpointFinalized {
    uint64 epoch_num = 1;
}

message EventCheckpointForgotten {
    uint64 epoch_num = 1;
}
